==> Mehawgin/DiffCompass/5525舞台/代码/4.0inch_SPI_Module_ST7796_MSP4030_MSP4031_V1.0/1-Demo/Demo_STM32/Demo_MSP4030_MSP4031_STM32F103ZET6_Hardware_SPI/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"
#include "SPI.h"

u8 LCD_RD_DATA(void)
{
	 u8 data;
	 LCD_CS_CLR;
	 LCD_RS_SET;
	 SPI_SetSpeed(SPI2,0);
	 data = SPI_WriteByte(SPI2,0xFF);
	 SPI_SetSpeed(SPI2,1);
	 LCD_CS_SET;
	 return data;
}

u16 Lcd_ReadData_16Bit(void)
{
	u16 r,g;
	LCD_CS_CLR;
	LCD_RS_CLR;	  
	SPI_WriteByte(SPI2,lcddev.rramcmd);
	SPI_SetSpeed(SPI2,0);
	LCD_RS_SET;
	SPI_WriteByte(SPI2,0xFF);
	r = SPI_WriteByte(SPI2,0xFF);
	g = SPI_WriteByte(SPI2,0xFF);
	SPI_SetSpeed(SPI2,1);
	LCD_CS_SET;
	r<<=8;
	r|=g;
	return r;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;	      
	RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOB ,ENABLE);	//使能GPIOB时钟
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9| GPIO_Pin_10| GPIO_Pin_11| GPIO_Pin_12; //GPIOB9,10,11,12
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;   //推挽输出
	GPIO_Init(GPIOB, &GPIO_InitStructure);//初始化
	LCD_LED=1;  //点亮背光
}

u16 LCD_Read_ID(void)
{
	u8 i,val[3] = {0};
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0xC3);   

	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x96);  
	LCD_CS_CLR;
	for(i=1;i<4;i++)
	{
		LCD_RS_CLR;	  
		SPI_WriteByte(SPI2,0xFB);
		LCD_RS_SET;
		SPI_WriteByte(SPI2,0x10+i);
		LCD_RS_CLR;	  
		SPI_WriteByte(SPI2,0xD3);
		SPI_SetSpeed(SPI2,0);
		LCD_RS_SET;
		val[i-1] = SPI_WriteByte(SPI2,0xFF);
		SPI_SetSpeed(SPI2,1);
		LCD_RS_CLR;	  
		SPI_WriteByte(SPI2,0xFB);
		LCD_RS_SET;
		SPI_WriteByte(SPI2,0x00);	
	}
	LCD_CS_SET;
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0x3C);   
	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x69);  
	lcddev.id=val[1];
	lcddev.id<<=8;
	lcddev.id|=val[2];
	return lcddev.id;
}
